--- a/Structural/adapterP.ipynb
+++ b/Structural/adapterP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "adapterP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNEDbiGA+2P+OwSnaquHmFf",
+      "authorship_tag": "ABX9TyMXhArhvtDbfLsjrXIdx5i8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ds1eFUgdBCPx",
-        "outputId": "4a5d7f83-a332-4dbf-de68-bf8ff9970d4f"
+        "outputId": "182e4d93-3c4a-4a57-8a10-7060be355ca3"
       },
       "source": [
         "class Animal:     #interface class\n",
@@ -58,7 +58,7 @@
         "makeWalk(kitty)\n",
         "makeWalk(bingo)"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
           "height": 322
         },
         "id": "Qrec8_DrBDit",
-        "outputId": "fa33e5a1-bc4c-426f-a208-f5b232430d4d"
+        "outputId": "93941286-79d4-44e6-cf5c-04381c1eb219"
       },
       "source": [
         "class Fish:    #fish doesn't have a run method\n",
@@ -89,7 +89,7 @@
         "\n",
         "makeWalk(nemo)  #nemo cannot walk"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "error",
@@ -98,8 +98,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-a48f164cf39c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnemo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFish\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mmakeWalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnemo\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m#nemo cannot walk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-1-cfddd896bf16>\u001b[0m in \u001b[0;36mmakeWalk\u001b[0;34m(animal)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmakeWalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manimal\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m   \u001b[0manimal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mkitty\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-5-a48f164cf39c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnemo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFish\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mmakeWalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnemo\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m#nemo cannot walk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-4-cfddd896bf16>\u001b[0m in \u001b[0;36mmakeWalk\u001b[0;34m(animal)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmakeWalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manimal\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m   \u001b[0manimal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mkitty\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: 'Fish' object has no attribute 'walk'"
           ]
         }
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZjJXnrq4BDe5",
-        "outputId": "c5cb7c16-644f-402a-cc4b-961e77bc6e5e"
+        "outputId": "dcae7841-1609-4183-fd92-889e26f95b9e"
       },
       "source": [
         "class FishAdapter(Animal):\n",
@@ -122,10 +122,10 @@
         "  def walk(self):\n",
         "    self.fish.swim()\n",
         "\n",
-        "fish_adapter = FishAdapter(nemo)\n",
-        "makeWalk(fish_adapter)"
+        "adapted_nemo = FishAdapter(nemo)\n",
+        "makeWalk(adapted_nemo)"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,6 +135,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nAGtSsD5Nk-Q"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
