--- a/SOLID/LiskovSubP.ipynb
+++ b/SOLID/LiskovSubP.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "LiskovSubP.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMEBtn+3r8Jol3MREXJWqdR",
+      "authorship_tag": "ABX9TyPpObtVXDs2dIWYvvtZdM0J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +28,39 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "iKSt6gvheyWv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0QtiZKB2lxWG",
+        "outputId": "3961c6ba-1979-4442-c3fd-f46eb454905c"
       },
       "source": [
-        "Liskov Substitution Principle을 준수하는 Animal과 Cat의 관계"
+        "class Cat:\n",
+        "  def speak(self):\n",
+        "    print(\"meow\")\n",
+        "\n",
+        "class BlackCat(Cat):\n",
+        "  def speak(self):\n",
+        "    print(\"black meow\")\n",
+        "\n",
+        "def speak(cat:Cat):\n",
+        "  cat.speak()\n",
+        "\n",
+        "\n",
+        "cat = Cat()\n",
+        "speak(cat)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "meow\n"
+          ]
+        }
       ]
     },
     {
@@ -43,48 +69,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "3vIUf6tQeut8",
-        "outputId": "37f04b59-38e3-4c05-f964-b3e767ae1557"
+        "id": "p6XSSpLfpSTU",
+        "outputId": "8be84df3-d229-46c0-b73c-0aa0b1641335"
       },
       "source": [
-        "class Animal:\n",
-        "  def speak(self):\n",
-        "    print(\"animal speaking\")\n",
-        "\n",
-        "class Cat(Animal):\n",
-        "  def speak(self):\n",
-        "    print(\"meow\")\n",
-        "\n",
-        "\n",
-        "def speak(animal:Animal):\n",
-        "  animal.speak()\n",
-        "\n",
-        "\n",
-        "animal = Animal()\n",
-        "cat = Cat()\n",
-        "\n",
-        "speak(animal)\n",
-        "speak(cat)  #Cat can substitute Animal"
+        "cat = BlackCat()\n",
+        "speak(cat)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "animal speaking\n",
-            "meow\n"
+            "black meow\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DnWg5j3qky6J"
-      },
-      "source": [
-        "Fish class는 Animal class를 치환 할 수 없다."
       ]
     },
     {
@@ -94,18 +94,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 346
         },
-        "id": "01Ee8evBfl0Q",
-        "outputId": "04e50270-3e84-4172-9aea-f875578d9644"
+        "id": "S1A9t183pXNF",
+        "outputId": "359e16d3-f168-426b-b5a2-ccc7b5368574"
       },
       "source": [
-        "class Fish(Animal):\n",
+        "class Fish(Cat):\n",
         "  def speak(self):\n",
         "    raise Exception(\"Fish cannot speak\")\n",
         "\n",
-        "fish = Fish()\n",
-        "speak(fish)"
+        "cat = Fish()\n",
+        "speak(cat)"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "error",
@@ -114,9 +114,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-574e6d1a469f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfish\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFish\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfish\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-1-8691e6b2c0db>\u001b[0m in \u001b[0;36mspeak\u001b[0;34m(animal)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manimal\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mAnimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m   \u001b[0manimal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-2-574e6d1a469f>\u001b[0m in \u001b[0;36mspeak\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mFish\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAnimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Fish cannot speak\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfish\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFish\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-3-6a75a05f3205>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFish\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-1-49cd11b0deea>\u001b[0m in \u001b[0;36mspeak\u001b[0;34m(cat)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mCat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0mcat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-3-6a75a05f3205>\u001b[0m in \u001b[0;36mspeak\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mFish\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Fish cannot speak\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFish\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mException\u001b[0m: Fish cannot speak"
           ]
         }
@@ -125,7 +125,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CQDiljtOgWT1"
+        "id": "EjGIdzbwpvVs"
       },
       "source": [
         ""
