--- a/SOLID/DependencyInvP.ipynb
+++ b/SOLID/DependencyInvP.ipynb
@@ -6,7 +6,7 @@
       "name": "DependencyInvP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMWUP+vnGpuCt6PsZoMZjq",
+      "authorship_tag": "ABX9TyNsJMAQ4PYGZDb02GWz16Qy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "zoo.speakAll()\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EEHBH5SI8lpS",
-        "outputId": "978c00f7-a4f3-49da-85b0-c4d99adb7d25"
+        "outputId": "a3bed100-51ae-425b-9182-7415c9186e68"
       },
       "source": [
         "class Animal: #abstract module\n",
@@ -119,26 +119,29 @@
         "class Zoo:\n",
         "  def __init__(self):\n",
         "    self.animals = []\n",
-        "    self.animals.append(Cat())\n",
-        "    self.animals.append(Dog())\n",
+        "\n",
+        "  def addAnimal(self,animal):\n",
+        "    self.animals.append(animal)\n",
         "  \n",
         "  def speakAll(self):\n",
         "    for animal in self.animals:\n",
         "      animal.speak()\n",
         "\n",
         "zoo = Zoo()\n",
+        "zoo.addAnimal(Cat())\n",
+        "zoo.addAnimal(Dog())\n",
         "zoo.speakAll()\n",
         "              "
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "meow\n",
             "bark\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
