--- a/Creational/FactoryMethodP.ipynb
+++ b/Creational/FactoryMethodP.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "FactoryMethodP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYpaWwy3lsSCoZK8d1YtTJ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPPpoqLC7UdIolfdZtgLhRF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +46,7 @@
         "  def speak(self):\n",
         "    print(\"bark\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +66,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7wWXYbzxUSke",
-        "outputId": "70ecb6da-eaf3-4b72-b791-02534ebea8de"
+        "outputId": "b431d1cc-986c-49d4-e77e-5e320f690546"
       },
       "source": [
         "class AnimalFactory():\n",
@@ -73,31 +74,42 @@
         "    pass\n",
         "\n",
         "class CatFactory(AnimalFactory):\n",
+        "  def __init__(self):\n",
+        "    self.cat_count = 0\n",
         "  def createAnimal(self):\n",
+        "    self.cat_count += 1\n",
         "    return Cat()\n",
+        "  def catCount(self):\n",
+        "    return self.cat_count\n",
         "\n",
-        "class DogFactory(AnimalFactory):\n",
+        "\n",
+        "class DogManager(AnimalFactory):\n",
+        "  def haveDog(self):\n",
+        "    self.dog = self.createAnimal()\n",
         "  def createAnimal(self):\n",
         "    return Dog()\n",
+        "  def makeWings(self,dog:Dog):\n",
+        "    print(\"dog wings added\")\n",
+        "    return dog\n",
         "\n",
         "\n",
         "cat_factory = CatFactory()\n",
         "cat = cat_factory.createAnimal()\n",
-        "cat.speak()\n",
+        "print(f\"{cat_factory.catCount()} cats are created\")\n",
         "\n",
-        "dog_factory = DogFactory()\n",
-        "dog = dog_factory.createAnimal()\n",
-        "dog.speak()"
+        "dog_manager = DogManager()\n",
+        "dog = dog_manager.haveDog()\n",
+        "wing_dog = dog_manager.makeWings(dog)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "meow\n",
-            "bark\n"
-          ],
-          "name": "stdout"
+            "1 cats are created\n",
+            "dog wings added\n"
+          ]
         }
       ]
     },
