--- a/Creational/BuilderP.ipynb
+++ b/Creational/BuilderP.ipynb
@@ -6,7 +6,7 @@
       "name": "BuilderP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPl7z5bch928ef61iWzZsxw",
+      "authorship_tag": "ABX9TyPXl6soLu+MaVhyZpjFxZCx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,26 +35,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AjLONtj55ODb",
-        "outputId": "78fb5482-7442-4c8d-e29c-55c7f4f5c8f4"
+        "outputId": "c5001e05-bee3-425b-d075-339ff014f7f7"
       },
       "source": [
         "class Cat:\n",
-        "  def __init__(self,height,weight,gender,breed): #could be more props such as color,type,and more...\n",
+        "  def __init__(self,height,weight,color): #could be more props such as type,and more...\n",
         "    self.height = height\n",
         "    self.weight = weight\n",
-        "    self.gender = gender\n",
-        "    self.breed = breed\n",
+        "    self.color = color\n",
         "\n",
         "  def print(self):\n",
-        "    return print(f\"{self.height}cm,{self.weight}kg,{self.gender},{self.breed}\")\n",
+        "    return print(f\"{self.height}cm,{self.weight}kg,{self.color}\")\n",
         "  \n",
         "\n",
         "class CatBuilder:\n",
         "  def __init__(self):\n",
-        "    self.height = 20\n",
-        "    self.weight = 5\n",
-        "    self.gender = \"female\"\n",
-        "    self.breed = \"street\"\n",
+        "    self.height = None\n",
+        "    self.weight = None\n",
+        "    self.color = None\n",
         "    \n",
         "  def setHeight(self,height):\n",
         "    self.height = height\n",
@@ -63,36 +61,30 @@
         "  def setWeight(self,weight):\n",
         "    self.weight = weight\n",
         "    return self\n",
-        "\n",
-        "  def setGender(self,gender):\n",
-        "    self.gender = gender\n",
-        "    return self\n",
-        "\n",
-        "  def setBreed(self,breed):\n",
-        "    self.breed = breed\n",
+        "  def setColor(self,color):\n",
+        "    self.color = color\n",
         "    return self\n",
         "\n",
         "  def build(self):\n",
-        "    cat = Cat(self.height,self.weight,self.gender,self.breed)\n",
+        "    cat = Cat(self.height,self.weight,self.color)\n",
         "    #building a cat can be very complex\n",
         "    return cat\n",
         "\n",
         "cat_builder = CatBuilder()\n",
         "cat_builder.setHeight(30)\n",
         "cat_builder.setWeight(7)\n",
-        "cat_builder.setGender(\"male\")\n",
-        "cat_builder.setBreed(\"street\")\n",
+        "cat_builder.setColor(\"black\")\n",
         "cat = cat_builder.build()\n",
         "cat.print()\n"
       ],
-      "execution_count": 10,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "30cm,7kg,male,street\n"
-          ],
-          "name": "stdout"
+            "30cm,7kg,black\n"
+          ]
         }
       ]
     },
@@ -100,30 +92,23 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XpvHtuGW6yvi",
-        "outputId": "062ece1b-9b52-46e3-ee07-852bfe510218"
+        "outputId": "95ba9e10-f795-4bf9-bb6f-8ccf8ecd9167"
       },
       "source": [
-        "cat = CatBuilder().setHeight(20).setWeight(19).setGender(\"female\").setBreed(\"bengal\").build()\n",
+        "cat = CatBuilder().setHeight(20).setWeight(19).setColor(\"green\").build()\n",
         "cat.print()"
       ],
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'20cm,19kg,female,bengal'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20cm,19kg,green\n"
+          ]
         }
       ]
     },
@@ -134,35 +119,79 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_UH0YNFH7xV4",
-        "outputId": "ad9d5e23-77df-4159-9ddb-3b509f02365b"
+        "outputId": "018c47c2-5613-4c8c-99db-587a2540df9f"
       },
       "source": [
-        "class PersianCatBuilder(CatBuilder):\n",
+        "class WhiteCatBuilder(CatBuilder):\n",
         "  def __init__(self):\n",
         "    super().__init__()\n",
-        "    self.height = 10\n",
-        "    self.weight = 10\n",
-        "    self.gender = \"male\"\n",
-        "    self.breed = \"persian\"\n",
+        "    self.color = \"white\"\n",
         "\n",
-        "cat = PersianCatBuilder().build()\n",
-        "cat.print()"
+        "class BlackCatBuilder(CatBuilder):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.color = \"black\"\n",
+        "\n",
+        "\n",
+        "white_cat = WhiteCatBuilder().setHeight(10).setWeight(10).build()\n",
+        "white_cat.print()\n",
+        "black_cat = BlackCatBuilder().setHeight(20).setWeight(20).build()\n",
+        "black_cat.print()"
       ],
-      "execution_count": 12,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "10cm,10kg,male,persian\n"
-          ],
-          "name": "stdout"
+            "10cm,10kg,white\n",
+            "20cm,20kg,black\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HKHJK9gl82uv"
+        "id": "HKHJK9gl82uv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "76ba126c-d22b-439d-f27d-dfd56b8bb08d"
+      },
+      "source": [
+        "#Director is not mandatory\n",
+        "class Director:\n",
+        "  def setSmallCat(self,builder:CatBuilder):\n",
+        "    builder.setWeight(5)\n",
+        "    builder.setHeight(5)\n",
+        "\n",
+        "\n",
+        "  def setBigCat(self,builder:CatBuilder):\n",
+        "    builder.setWeight(100)\n",
+        "    builder.setHeight(100)\n",
+        "\n",
+        "director = Director()\n",
+        "black_cat_builder = BlackCatBuilder()\n",
+        "director.setBigCat(black_cat_builder)\n",
+        "cat = black_cat_builder.build()\n",
+        "cat.print()"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100cm,100kg,black\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hnnsMvlndavK"
       },
       "source": [
         ""
